--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="buttons">
+        <button id="all">All</button>
+        <button id="dog">Dog</button>
+        <button id="dino">Dino</button>
+        <button id="cat">Cat</button>
+     </div>
+     <div id="pet-zone"></div>
     <script src="main.js"></script>
 </body>
 </html>
