added css and js

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div id="buttons">
-        <button id="all">All</button>
-        <button id="dog">Dog</button>
-        <button id="dino">Dino</button>
-        <button id="cat">Cat</button>
+        <button id="All">All</button>
+        <button id="Dog">Dog</button>
+        <button id="Dino">Dino</button>
+        <button id="Cat">Cat</button>
      </div>
      <div id="pet-zone"></div>
     <script src="main.js"></script>
